Training and testing loop with manual seed for repoducibility.

--- a/Pytorch File/Chapter_2.ipynb
+++ b/Pytorch File/Chapter_2.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c8445c58",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "078040e6",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "344fb58c",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "(1000, 1000)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e94c27fd",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e0fc6b87",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "bef07b40",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "       0, 1, 0, 1, 0, 0, 0, 1, 0, 0])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "09e0b8c1",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
        "20  0.626827  0.450047      1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "03c4d42d",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a9c43876",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "02729694",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e2ca019c",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "((1000, 2), (1000,))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7b8c5810",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "4863e219",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        "'2.9.1+cpu'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "2a784694",
    "metadata": {},
    "outputs": [],
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "fdf00342",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
        "(torch.float32, torch.float32)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "6e238c41",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
        "        [ 0.4422, -0.8967]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "382be27f",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
        "tensor([1., 1., 1., 1., 0.])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "e126bd86",
    "metadata": {},
    "outputs": [],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "99b3fc73",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
        "800"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "3fc30ba5",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
        "200"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "d46b7e8f",
    "metadata": {},
    "outputs": [
@@ -649,7 +649,7 @@
        "(800, 200)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "00fa30f2",
    "metadata": {},
    "outputs": [],
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "71dbe804",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "83f1e36e",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
        ")"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "c58d8783",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "10974cb3",
    "metadata": {},
    "outputs": [
@@ -785,7 +785,7 @@
        "device(type='cpu')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "986292e7",
    "metadata": {},
    "outputs": [
@@ -809,7 +809,7 @@
        ")"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "5f82c57c",
    "metadata": {},
    "outputs": [
@@ -833,18 +833,18 @@
      "data": {
       "text/plain": [
        "OrderedDict([('0.weight',\n",
-       "              tensor([[ 0.5764,  0.4597],\n",
-       "                      [ 0.0188,  0.1979],\n",
-       "                      [-0.1376,  0.6759],\n",
-       "                      [-0.5519, -0.2918],\n",
-       "                      [ 0.1146,  0.6459]])),\n",
-       "             ('0.bias', tensor([ 0.4174, -0.1852,  0.6243, -0.1526,  0.2076])),\n",
+       "              tensor([[-0.5068,  0.1290],\n",
+       "                      [ 0.3685,  0.5789],\n",
+       "                      [-0.2128, -0.1906],\n",
+       "                      [ 0.1596, -0.1676],\n",
+       "                      [ 0.6288,  0.2265]])),\n",
+       "             ('0.bias', tensor([ 0.0560, -0.4873, -0.6035,  0.6378,  0.3852])),\n",
        "             ('1.weight',\n",
-       "              tensor([[-0.2189, -0.3179,  0.3254, -0.2672, -0.3741]])),\n",
-       "             ('1.bias', tensor([-0.0247]))])"
+       "              tensor([[ 0.1901, -0.2111, -0.2595, -0.3129, -0.2489]])),\n",
+       "             ('1.bias', tensor([-0.2498]))])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "452d667f",
    "metadata": {},
    "outputs": [],
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "f0519f05",
    "metadata": {},
    "outputs": [
@@ -878,16 +878,16 @@
       "Length of test samples: 200, Shape: torch.Size([200])\n",
       "\n",
       "First 10 predictions:\n",
-      "tensor([[ 0.0630],\n",
-      "        [ 0.0050],\n",
-      "        [ 0.1936],\n",
-      "        [ 0.0260],\n",
-      "        [ 0.1597],\n",
-      "        [ 0.1245],\n",
-      "        [-0.0119],\n",
-      "        [ 0.0160],\n",
-      "        [ 0.1948],\n",
-      "        [ 0.0007]], grad_fn=<SliceBackward0>)\n",
+      "tensor([[-0.1886],\n",
+      "        [-0.3301],\n",
+      "        [-0.0300],\n",
+      "        [-0.2327],\n",
+      "        [-0.3672],\n",
+      "        [-0.4510],\n",
+      "        [-0.5823],\n",
+      "        [-0.6115],\n",
+      "        [-0.0160],\n",
+      "        [-0.3434]], grad_fn=<SliceBackward0>)\n",
       "\n",
       "First 10 test labels:\n",
       "tensor([1., 0., 1., 0., 1., 1., 0., 0., 1., 0.])\n"
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "bdfe44ab",
    "metadata": {},
    "outputs": [],
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "id": "c64e377a",
    "metadata": {},
    "outputs": [],
@@ -958,21 +958,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "id": "7cbe41bf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.0630],\n",
-       "        [0.0050],\n",
-       "        [0.1936],\n",
-       "        [0.0260],\n",
-       "        [0.1597]], grad_fn=<SliceBackward0>)"
+       "tensor([[-0.1886],\n",
+       "        [-0.3301],\n",
+       "        [-0.0300],\n",
+       "        [-0.2327],\n",
+       "        [-0.3672]], grad_fn=<SliceBackward0>)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,13 +984,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "a920f295",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1., 0., 1., 0., 1.])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "712f74fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.4530],\n",
+       "        [0.4182],\n",
+       "        [0.4925],\n",
+       "        [0.4421],\n",
+       "        [0.4092]], grad_fn=<SliceBackward0>)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Use sigmoid activation function on the model\n",
+    "y_pred_probs=torch.sigmoid(y_logits.to(device))\n",
+    "y_pred_probs[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0209e322",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.]], grad_fn=<SliceBackward0>)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# torch.round() to round the prediction to the nearest integer 0 or 1 \n",
+    "torch.round(y_pred_probs)[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9446a48a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15c0c5a3",
+   "metadata": {},
+   "source": [
+    "For our Prediction probability values, we need to perform a range-style rounding on them :\n",
+    "* y_pred >=0.5, y=1 (class=1)\n",
+    "* y_pred <0.5, y=0 (class=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "42aaed52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([False, False, False, False, False])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.4530, 0.4182, 0.4925, 0.4421, 0.4092], grad_fn=<SqueezeBackward0>)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the predicted labels\n",
+    "y_pred_labels=torch.round(torch.sigmoid(model_0(X_test.to(device))[:5]))\n",
+    "# Check for equality\n",
+    "print(torch.eq(y_pred_probs.squeeze(),y_pred_labels.squeeze()))\n",
+    "\n",
+    "y_pred_probs.squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0f683c73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1., 0., 1., 0., 1.])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "8029ebd1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n   "
+    "### Building a training and testing loop in pytorch\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98e85087",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
