--- a/Pytorch File/Chapter_3.ipynb
+++ b/Pytorch File/Chapter_3.ipynb
@@ -826,7 +826,10 @@
    "id": "1224eeeb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "from torch.nn"
+   ]
   }
  ],
  "metadata": {
