Computer Vision GPU implemetation

--- a/Pytorch File/Chapter_3.ipynb
+++ b/Pytorch File/Chapter_3.ipynb
@@ -885,9 +885,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5cd3d102",
+   "metadata": {},
+   "source": [
+    "# Setting  GPU for training  the mode "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f93867c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cpu'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch \n",
+    "device=\"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "device"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f93867c4",
+   "id": "6c8f969b",
    "metadata": {},
    "outputs": [],
    "source": []
