Training Non Lineraity

--- a/Pytorch File/Chapter_3.ipynb
+++ b/Pytorch File/Chapter_3.ipynb
@@ -965,8 +965,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "98db6ec6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import param\n",
+    "from helper_functions import accuracy_fn\n",
+    "loss_fn=nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.SGD(params=model_1.parameters(), \n",
+    "                            lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "80b22bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_step(model:torch.nn.Module,\n",
+    "               data_loader:torch.utils.data.DataLoader,\n",
+    "               loss_fn:torch.optim.Optimizer,\n",
+    "               accuracy_fn,\n",
+    "               device:torch.device=device):\n",
+    "    train_loss,train_acc=0,0\n",
+    "    model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46f59739",
    "metadata": {},
    "outputs": [],
    "source": []
