--- a/Pytorch File/Chapter_3.ipynb
+++ b/Pytorch File/Chapter_3.ipynb
@@ -979,24 +979,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "id": "80b22bfb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from networkx import optimal_edit_paths\n",
+    "\n",
+    "\n",
     "def train_step(model:torch.nn.Module,\n",
     "               data_loader:torch.utils.data.DataLoader,\n",
-    "               loss_fn:torch.optim.Optimizer,\n",
+    "               loss_fn:torch.nn.Module,\n",
+    "               optimizer:torch.optim.Optimizer,\n",
     "               accuracy_fn,\n",
     "               device:torch.device=device):\n",
     "    train_loss,train_acc=0,0\n",
-    "    model.to(device)"
+    "    model.to(device)\n",
+    "    for batch,(x,y) in enumerate(data_loader):\n",
+    "        x,y=x.to(device),y.to(device)\n",
+    "        y_pred=model(x)\n",
+    "        loss=loss_fn(y_pred,y)\n",
+    "        train_loss+=loss\n",
+    "        train_acc+=accuracy_fn(y_true=y,y_pred=y_pred.argmax(dim=1))\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    train_loss/=len(data_loader)\n",
+    "    train_acc/=len(data_loader)\n",
+    "\n",
+    "    print(f\"Train loss: {train_loss:.5f} | Train accuracy: {train_acc:.2f}%\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "46f59739",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_step(data_loader:torch.utils.data.DataLoader,\n",
+    "              model:torch.nn.Module,\n",
+    "              loss_fn:torch.nn.Module,\n",
+    "              accuracy_fn,\n",
+    "              device:torch.device=device):\n",
+    "    test_loss,test_acc=0,0\n",
+    "    model.to(device)\n",
+    "    model.eval\n",
+    "    with torch.inference_mode():\n",
+    "        for x,y in data_loader:\n",
+    "            x,y=x.to(device),y.to(device)\n",
+    "            test_pred=model(x)\n",
+    "            test_loss+=loss_fn(test_pred,y)\n",
+    "            test_acc+=accuracy_fn(y_true=y,\n",
+    "                y_pred=test_pred.argmax(dim=1) # Go from logits -> pred labels\n",
+    "            )\n",
+    "    test_loss /= len(data_loader)\n",
+    "    test_acc /= len(data_loader)\n",
+    "    print(f\"Test loss: {test_loss:.5f} | Test accuracy: {test_acc:.2f}%\\n\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a181683a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8165ed3af1cf49c8b416eecdff8a861b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0\n",
+      "---------\n",
+      "Train loss: 1.28684 | Train accuracy: 51.89%\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Inplace update to inference tensor outside InferenceMode is not allowed.You can make a clone to get a normal tensor before doing inplace update.See https://github.com/pytorch/rfcs/pull/17 for more details.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[47], line 13\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m---------\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m     train_step(data_loader\u001b[38;5;241m=\u001b[39mtrain_dataloader, \n\u001b[0;32m      8\u001b[0m         model\u001b[38;5;241m=\u001b[39mmodel_1, \n\u001b[0;32m      9\u001b[0m         loss_fn\u001b[38;5;241m=\u001b[39mloss_fn,\n\u001b[0;32m     10\u001b[0m         optimizer\u001b[38;5;241m=\u001b[39moptimizer,\n\u001b[0;32m     11\u001b[0m         accuracy_fn\u001b[38;5;241m=\u001b[39maccuracy_fn\n\u001b[0;32m     12\u001b[0m     )\n\u001b[1;32m---> 13\u001b[0m     test_step(data_loader\u001b[38;5;241m=\u001b[39mtest_dataloader,\n\u001b[0;32m     14\u001b[0m         model\u001b[38;5;241m=\u001b[39mmodel_1,\n\u001b[0;32m     15\u001b[0m         loss_fn\u001b[38;5;241m=\u001b[39mloss_fn,\n\u001b[0;32m     16\u001b[0m         accuracy_fn\u001b[38;5;241m=\u001b[39maccuracy_fn\n\u001b[0;32m     17\u001b[0m     )\n\u001b[0;32m     19\u001b[0m train_time_end_on_gpu \u001b[38;5;241m=\u001b[39m timer()\n\u001b[0;32m     20\u001b[0m total_train_time_model_1 \u001b[38;5;241m=\u001b[39m print_train_time(start\u001b[38;5;241m=\u001b[39mtrain_time_start_on_gpu,\n\u001b[0;32m     21\u001b[0m                                             end\u001b[38;5;241m=\u001b[39mtrain_time_end_on_gpu,\n\u001b[0;32m     22\u001b[0m                                             device\u001b[38;5;241m=\u001b[39mdevice)\n",
+      "Cell \u001b[1;32mIn[46], line 17\u001b[0m, in \u001b[0;36mtest_step\u001b[1;34m(data_loader, model, loss_fn, accuracy_fn, device)\u001b[0m\n\u001b[0;32m     13\u001b[0m         test_loss\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39mloss_fn(test_pred,y)\n\u001b[0;32m     14\u001b[0m         test_acc\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39maccuracy_fn(y_true\u001b[38;5;241m=\u001b[39my,\n\u001b[0;32m     15\u001b[0m             y_pred\u001b[38;5;241m=\u001b[39mtest_pred\u001b[38;5;241m.\u001b[39margmax(dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;66;03m# Go from logits -> pred labels\u001b[39;00m\n\u001b[0;32m     16\u001b[0m         )\n\u001b[1;32m---> 17\u001b[0m test_loss \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(data_loader)\n\u001b[0;32m     18\u001b[0m test_acc \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(data_loader)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTest loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtest_loss\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.5f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m | Test accuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtest_acc\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Inplace update to inference tensor outside InferenceMode is not allowed.You can make a clone to get a normal tensor before doing inplace update.See https://github.com/pytorch/rfcs/pull/17 for more details."
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "from timeit import default_timer as timer \n",
+    "train_time_start_on_gpu=timer()\n",
+    "epoch=10\n",
+    "for epoch in tqdm(range(epochs)):\n",
+    "    print(f\"Epoch: {epoch}\\n---------\")\n",
+    "    train_step(data_loader=train_dataloader, \n",
+    "        model=model_1, \n",
+    "        loss_fn=loss_fn,\n",
+    "        optimizer=optimizer,\n",
+    "        accuracy_fn=accuracy_fn\n",
+    "    )\n",
+    "    test_step(data_loader=test_dataloader,\n",
+    "        model=model_1,\n",
+    "        loss_fn=loss_fn,\n",
+    "        accuracy_fn=accuracy_fn\n",
+    "    )\n",
+    "\n",
+    "train_time_end_on_gpu = timer()\n",
+    "total_train_time_model_1 = print_train_time(start=train_time_start_on_gpu,\n",
+    "                                            end=train_time_end_on_gpu,\n",
+    "                                            device=device)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82683922",
    "metadata": {},
    "outputs": [],
    "source": []
