--- a/DSA_Preparation_Folder/Dynamic_programming_1.ipynb
+++ b/DSA_Preparation_Folder/Dynamic_programming_1.ipynb
@@ -2,13 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Tabulation Part \n",
+    "## Tribonnaci Number \n",
+    "def tri(n):\n",
+    "    if (n==0 or n==1 or n==2):\n",
+    "        return 0\n",
+    "    elif (n==3):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return tri(n-1)+tri(n-2)+tri(n-3)\n",
+    "   \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tri(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  0  1  1  2  4  7  13  24  44  "
+     ]
+    }
+   ],
+   "source": [
+    "def printTrib(n) :\n",
+    "    for i in range(1, n+1) :\n",
+    "        print( tri(i) , \" \", end = \"\")\n",
+    "        \n",
+    "\n",
+    "# Driver code\n",
+    "n = 10\n",
+    "printTrib(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
