--- a/DSA_Preparation_Folder/Dynamic_programming_1.ipynb
+++ b/DSA_Preparation_Folder/Dynamic_programming_1.ipynb
@@ -2,64 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## Tribonnaci Number \n",
-    "def tri(n):\n",
-    "    if (n==0 or n==1 or n==2):\n",
-    "        return 0\n",
-    "    elif (n==3):\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return tri(n-1)+tri(n-2)+tri(n-3)\n",
-    "   \n",
-    "\n"
-   ]
+   "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "44"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "tri(10)"
+    "## Top to Bottom\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0  0  1  1  2  4  7  13  24  44  "
+      "0 0 1 1 2 4 7 13 24 44 "
      ]
     }
    ],
    "source": [
-    "def printTrib(n) :\n",
-    "    for i in range(1, n+1) :\n",
-    "        print( tri(i) , \" \", end = \"\")\n",
-    "        \n",
-    "\n",
-    "# Driver code\n",
-    "n = 10\n",
-    "printTrib(n)\n"
+    "def tribonacci(n):\n",
+    "    h={}\n",
+    "    def tri(n):\n",
+    "        if n in h:\n",
+    "            return h[n]\n",
+    "        elif(n==0 or n==1):\n",
+    "            return 0\n",
+    "        elif(n==2):\n",
+    "            return 1\n",
+    "        else:\n",
+    "            res=tri(n-3)+tri(n-2)+tri(n-1)\n",
+    "            h[n]=res\n",
+    "        return res\n",
+    "    return tri(n)\n",
+    "n=10\n",
+    "for i in range(n):\n",
+    "    print(tribonacci(i),end=' ')\n",
+    "            "
    ]
   },
   {
@@ -67,7 +53,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Table method "
+   ]
   }
  ],
  "metadata": {
@@ -77,18 +65,10 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
