--- a/DSA_Preparation_Folder/Dynamic_programming_1.ipynb
+++ b/DSA_Preparation_Folder/Dynamic_programming_1.ipynb
@@ -50,11 +50,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 \n",
+      "\n",
+      "0 \n",
+      "\n",
+      "1 \n",
+      "\n",
+      "1 \n",
+      "\n",
+      "2 \n",
+      "\n",
+      "4 \n",
+      "\n",
+      "7 \n",
+      "\n",
+      "13 \n",
+      "\n",
+      "24 \n",
+      "\n",
+      "44 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Table method \n",
+    "\n",
+    "def tri(n):\n",
+    "    dp=[0]*n\n",
+    "    dp[0]=dp[1]=0\n",
+    "    dp[2]=1\n",
+    "    for i in range(3,n):\n",
+    "        dp[i]=dp[i-3]+dp[i-2]+dp[i-1]\n",
+    "\n",
+    "    for i in range(0,n):\n",
+    "        print(dp[i],\"\\n\")\n",
+    "n=10\n",
+    "tri(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2e818636",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Table method "
+    "###Lucas Numbers\n",
+    "\n",
+    "def lucas(n):\n",
+    "    dp=[0]*(n+1)\n",
+    "    dp[0]=2\n",
+    "    dp[1]=1\n",
+    "    for i in range(2,n+1):\n",
+    "        dp[i]=dp[i-1]+dp[i-2]\n",
+    "\n",
+    "    return dp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5c2b4922",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 1, 3, 4]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lucas(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a11e38f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Climbing Stair case\n"
    ]
   }
  ],
@@ -65,7 +154,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
